--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="/favicon.ico"
-      type="image/x-icon"
-      sizes="32x32"
-    />
-    <title>Burger Builder</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="shortcut icon"
+			href="/favicon.ico"
+			type="image/x-icon"
+			sizes="32x32"
+		/>
+		<title>Burger Builder</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src"></script>
+	</body>
 </html>
